--- a/.github/linters/.yaml-lint.yml
+++ b/.github/linters/.yaml-lint.yml
@@ -55,5 +55,5 @@ rules:
     allow-non-breakable-inline-mappings: true
   new-line-at-end-of-file: disable
   new-lines:
-    type: unix
+    type: dos
   trailing-spaces: disable
